--- a/css/main.css
+++ b/css/main.css
@@ -79,3 +79,147 @@ body {
     margin-top: 50px;
  }
 
+ #banner {
+   text-align: center;
+   background-color: #c3c3c3;
+   height: 300px;
+ }
+
+ p,h1,h2,h3 {
+   margin-bottom: 10px;
+ }
+
+ #finale-project {
+   text-align: center;
+ }
+
+ #event-details {
+   text-align: center;
+ }
+
+ .event-box {
+   border: black 1px solid ;
+   border-radius: 50px;
+   height: 250px;
+   text-align: center;
+   margin-top: 30px;
+   
+ }
+
+ .event-box h3 {
+   padding-top: 50px;
+ }
+
+ .event-box p {
+   padding-top: 20px;
+ }
+
+#spot {
+   text-align: center;
+   margin-top: 30px;
+   
+}
+
+#spot h2 {
+   border-bottom: 4px black solid;
+   width: 50%;
+   margin-left: 25%;
+}
+
+.container {
+   background-color: #c3c3c3;
+   height: 400px;
+   margin-top: 40px;
+}
+
+.container p {
+   margin-top: 70%;
+   border-top: 2px black solid;
+   padding-top: 10px;
+}
+
+#mentions {
+   text-align: center;
+   margin-top: 30px;
+   
+}
+
+#mentions h2 {
+   border-bottom: 4px black solid;
+   width: 50%;
+   margin-left: 25%;
+}
+
+
+
+ @media screen and (min-width: 768px) {
+
+
+
+ 
+   #sticky-nav-con {
+      position: sticky;
+      top: 0px;
+      background-color: #fff;
+      border-bottom: solid 1px #c3c3c3;
+      z-index: 1;
+   }
+
+   #hamburger {
+     display: none;
+   }
+
+   #burger {
+     display: none;
+   }
+
+   #logo {
+      margin-top: 25px;
+      order: -1;
+      height: 100px;
+      width: 200px;
+
+   }
+
+   #button {
+      display: none;
+   }
+
+   #burger-con {
+      display: block;
+      font-size: 12px;
+   }
+
+   #burger-con ul li, #burger-con ul li:first-child {
+      border: none;
+      display: inline;
+   }
+
+   #main-nav ul li a {
+      display: inline;
+      font-size: 16px;
+      padding-right: 7px;
+      font-weight: bold;
+   }
+
+   #main-nav ul li a:hover {
+     font-size: 18px;
+
+  }
+
+   #burger-con ul li {
+      margin-right: 10px;
+   }
+
+   #burger-con ul li:last-child {
+      margin-right: 0px;
+      padding-right: 0;
+   }
+
+   #main-nav {
+      padding-left: 30px;
+      margin-top: 4%;
+      margin-bottom: 4%;
+      margin-top: 12%;
+   }
+}
