--- a/css/main.css
+++ b/css/main.css
@@ -122,8 +122,8 @@ body {
 
 #spot h2 {
    border-bottom: 4px black solid;
-   width: 50%;
-   margin-left: 25%;
+   width: fit-content;
+   margin-left: 40%;
 }
 
 .container {
@@ -146,10 +146,103 @@ body {
 
 #mentions h2 {
    border-bottom: 4px black solid;
-   width: 50%;
-   margin-left: 25%;
+   width: fit-content;
+   margin-left: 40%;
 }
 
+#project {
+   margin-top: 100px;
+}
+
+.project-container {
+   background-color: #c3c3c3;
+   border-radius: 40px;
+   height: 300px;
+   margin-top: 50px;
+}
+
+.heading-container {
+   border-radius: 40px;
+   height: 300px;
+   margin-top: 50px;
+}
+
+.heading-container h2 {
+   text-align: center;
+   position: relative;
+   top: 50%;
+   transform: translateY(-50%);
+   border-bottom: 4px black solid;
+   width: fit-content;
+   left: 35%;
+}
+
+#reviews h2 {
+   border-bottom: 4px black solid;
+   width: fit-content;
+   margin-left: 45%;
+   margin-top: 30px;
+}
+
+.review-container {
+   border: 1px black solid;
+   height: 200px;
+   border-radius: 60px;
+   margin-top: 20px;
+   
+}
+
+#course-details h2 {
+   margin-top: 30px;
+}
+
+#course-details p {
+   margin-top: 20px;
+}
+
+#learn-more-button {
+   height: 40px;
+   color:#242380;
+   border-radius: 10px;
+   font-size: 20px;
+   border: #0a0202;
+}
+
+#dev-spotlight h2 {
+   border-bottom: 4px black solid;
+   width: fit-content;
+   margin-left: 40%;
+   margin-top: 30px;
+}
+
+.dev-container {
+   border: 1px black solid;
+   height: 50px;
+   border-radius: 60px;
+   margin-top: 20px;
+   
+}
+
+#portfolio-gallery h2 {
+   border-bottom: 4px black solid;
+   width: fit-content;
+   margin-left: 37%;
+   margin-top: 30px;
+}
+
+.gallery-container {
+   border: 1px black solid;
+   height: 50px;
+   border-radius: 60px;
+   margin-top: 20px;
+   
+}
+
+#footer {
+   background-color: red;
+   height: 300px;
+   margin-top: 30px;
+}
 
 
  @media screen and (min-width: 768px) {
@@ -186,14 +279,11 @@ body {
    }
 
    #burger-con {
-      display: block;
+      display: inline;
       font-size: 12px;
    }
 
-   #burger-con ul li, #burger-con ul li:first-child {
-      border: none;
-      display: inline;
-   }
+  
 
    #main-nav ul li a {
       display: inline;
@@ -207,19 +297,5 @@ body {
 
   }
 
-   #burger-con ul li {
-      margin-right: 10px;
-   }
 
-   #burger-con ul li:last-child {
-      margin-right: 0px;
-      padding-right: 0;
-   }
-
-   #main-nav {
-      padding-left: 30px;
-      margin-top: 4%;
-      margin-bottom: 4%;
-      margin-top: 12%;
-   }
 }
