--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,10 @@ body {
    background-color: #c3c3c3;
    height: 300px;
  }
+ 
+ h1 {
+   color: #E02626;
+ }
 
  p,h1,h2,h3 {
    margin-bottom: 10px;
@@ -239,7 +243,7 @@ body {
 }
 
 #footer {
-   background-color: red;
+   background-color: #E02626;
    height: 300px;
    margin-top: 30px;
 }
@@ -286,7 +290,7 @@ body {
   
 
    #main-nav ul li a {
-      display: inline;
+      display: inline-block;
       font-size: 16px;
       padding-right: 7px;
       font-weight: bold;
