--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* 1. -----Genral Styles-----*/
 body {
-    color: #242380;
+    color: black;
     font-family: 'Segoe UI', 'Times New Roman', serif;
     font-size: 16px;
  }
@@ -85,16 +85,21 @@ body {
    height: 300px;
  }
  
- h1 {
+ h1,h3 {
    color: #E02626;
  }
 
  p,h1,h2,h3 {
-   margin-bottom: 10px;
+   margin-bottom: 20px;
  }
 
  #finale-project {
    text-align: center;
+ }
+
+ .video-container {
+   height: fit-content;
+   width: fit-content;
  }
 
  #event-details {
@@ -204,12 +209,20 @@ body {
    margin-top: 20px;
 }
 
-#learn-more-button {
+button {
    height: 40px;
-   color:#242380;
-   border-radius: 10px;
+   color:black;
+   border-radius: 15px;
    font-size: 20px;
-   border: #0a0202;
+   border: none;
+   background-color: #ffc7c7;
+}
+
+button:hover {
+   transform: scale(1.2);
+   transition: all .5s ease-in-out;
+   background-color: #ffc7c7;
+   cursor: pointer;
 }
 
 #dev-spotlight h2 {
