--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,9 @@ button:hover {
    background-color: #E02626;
    height: 300px;
    margin-top: 30px;
+   align-items: center;
 }
+
 
 
  @media screen and (min-width: 768px) {
@@ -367,6 +369,7 @@ button:hover {
       font-size: 16px;
       margin-top: 28px;
    }
+
 
 }
 
