--- a/css/main.css
+++ b/css/main.css
@@ -80,17 +80,11 @@ body {
 
  
  #logo {
-   display: none;
- }
-
- #logo-mobile-1{
-    margin-top: -50px;
- }
-
- #logo-mobile-2 {
    margin-top: -50px;
    margin-left: 25px;
  }
+
+
 
  #burger {
     margin-top: 50px;
@@ -320,11 +314,16 @@ button:hover {
 
   
 
-   #main-nav ul li a {
+   #sticky-nav-con div ul li a {
       display: inline-block;
       font-size: 16px;
       padding-right: 7px;
       font-weight: bold;
+      
+   }
+
+   #main-nav ul li{
+      border: none;
    }
 
    #main-nav ul li a:hover {
@@ -332,6 +331,7 @@ button:hover {
 
   }
 
+  
 
 }
 
@@ -339,7 +339,7 @@ button:hover {
 @media screen and (min-width: 1200px) {
 
 
-   #main-header {
+/*   #main-header {
       height: 110px;
    }
 
@@ -369,7 +369,6 @@ button:hover {
       font-size: 16px;
       margin-top: 28px;
    }
-
-
+   
+*/
 }
-
