--- a/css/main.css
+++ b/css/main.css
@@ -21,75 +21,67 @@ body {
  
 
   #main-nav label img {
-    width: 20px;
-    height: 20px;
-    color: #E02626;
-    margin-top: 15px;
-    cursor: pointer;
-    transition: all .5s ease;
-    margin-bottom: 20px; 
- } 
- 
- #main-nav input, #burger-con {
-    display: none;
- }
-  
- #main-nav input:checked ~ #burger-con {
-    display: block;
- }
-
- 
- #main-nav input:checked ~ label img {
-    transform: rotate(90deg);
- }
-
- #main-nav input:checked ~ #logo-mobile-1 {
-     margin-bottom: 70px;
+   width: 20px;
+   height: 20px;
+   margin-top: 15px;
+   cursor: pointer;
+   transition: all .5s ease;
+   margin-bottom: 20px; 
 } 
- 
- #main-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
- }
- 
- #main-nav ul li a {
-    display: block;
-    padding: 10px 0 10px 0;
-    text-align: center;
-    color: white;
- }
- 
- #main-nav ul li {
-    border-bottom: 1px solid #efefef;
- }
- 
- 
- 
- #main-nav ul li:first-child {
-    border-top: 1px solid #efefef;
- }
- 
- #main-nav ul li:last-child {
-    margin-bottom: 10px;
- } 
 
- #sticky-nav-con{
+#main-nav input, #burger-con {
+   display: none;
+}
+ 
+#main-nav input:checked ~ #burger-con {
+   display: block;
+}
+
+#main-nav input:checked ~ label img {
+   transform: rotate(90deg);
+}
+
+#main-nav ul {
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+
+#main-nav ul li a {
+   display: block;
+   padding: 10px 0 10px 0;
+   text-align: center;
+   color: #ffffff;
+}
+
+#main-nav ul li {
+   border-bottom: 1px solid #efefef;
+}
+
+
+
+#main-nav ul li:first-child {
+   border-top: 1px solid #efefef;
+}
+
+#main-nav ul li:last-child {
+   margin-bottom: 10px;
+} 
+
+#sticky-nav-con {
    background-color: #E02626;
- }
-
- 
- #logo {
-   margin-top: -50px;
-   margin-left: 25px;
- }
+}
 
 
 
- #burger {
-    margin-top: 50px;
- }
+#logo {
+   max-width: 288px;
+   margin-bottom: 20px;
+}
 
+#burger {
+   margin-top: 50px;
+}
  #banner {
    text-align: center;
    background-color: #c3c3c3;
@@ -268,8 +260,12 @@ button:hover {
 
 #footer {
    background-color: #E02626;
-   height: 300px;
+   height: 200px;
    margin-top: 30px;
+   align-items: center;
+}
+
+#footer img {
    align-items: center;
 }
 
@@ -288,6 +284,10 @@ button:hover {
       z-index: 1;
    }
 
+   #main-header {
+      height: 110px;
+   }
+   
    #hamburger {
      display: none;
    }
@@ -298,6 +298,7 @@ button:hover {
 
    #logo {
       margin-top: 25px;
+      order: -1;
       height: 100px;
       width: 200px;
 
@@ -312,24 +313,45 @@ button:hover {
       font-size: 12px;
    }
 
-  
+   #burger-con ul li, #burger-con ul li:first-child {
+      border: none;
+      display: inline;
+   }
 
-   #sticky-nav-con div ul li a {
-      display: inline-block;
+   #main-nav ul li a {
+      display: inline;
       font-size: 16px;
       padding-right: 7px;
       font-weight: bold;
       
    }
 
-   #main-nav ul li{
-      border: none;
+   #main-nav ul{
+      margin-left: 80px;
+      margin-top: -40px;
+      text-align: right;
    }
 
    #main-nav ul li a:hover {
      font-size: 18px;
 
   }
+
+   #burger-con ul li {
+      margin-right: 10px;
+   }
+
+   #burger-con ul li:last-child {
+      margin-right: 0px;
+      padding-right: 0;
+   }
+
+   #main-nav {
+      padding-left: 30px;
+      margin-top: 4%;
+      margin-bottom: 4%;
+      margin-top: 12%;
+   }
 
   
 
@@ -339,7 +361,7 @@ button:hover {
 @media screen and (min-width: 1200px) {
 
 
-/*   #main-header {
+   #main-header {
       height: 110px;
    }
 
@@ -369,6 +391,8 @@ button:hover {
       font-size: 16px;
       margin-top: 28px;
    }
-   
-*/
+
+   #main-nav ul{
+      margin-top: 35px;
+   }
 }
