--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,6 @@ body {
 
 #logo {
    max-width: 288px;
-   padding-top: 10px;
 }
 
 
@@ -94,9 +93,20 @@ body {
    height: 300px;
  }
  
- h1,h3 {
+ #banner h2 {
+   color: black;
+   margin-top: 10px;
+ }
+
+ #banner h3 {
    color: #E02626;
  }
+
+ h1,h2 {
+   color: #E02626;
+   margin-top: 10px;
+ }
+
 
  p,h1,h2,h3 {
    margin-bottom: 20px;
@@ -179,16 +189,13 @@ body {
    border-radius: 40px;
    height: 300px;
    margin-top: 50px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .heading-container h2 {
-   text-align: center;
-   position: relative;
-   top: 50%;
-   transform: translateY(-50%);
-   border-bottom: 4px black solid;
-   width: fit-content;
-   left: 35%;
+   text-decoration: underline;
 }
 
 #reviews h2 {
@@ -241,9 +248,14 @@ button:hover {
    margin-top: 30px;
 }
 
+#dev-spotlight a {
+   display: flex;
+   justify-content: center;
+}
+
 .dev-container {
    border: 1px black solid;
-   height: 50px;
+   height: 100px;
    border-radius: 60px;
    margin-top: 20px;
    
@@ -255,9 +267,16 @@ button:hover {
    margin-top: 30px;
 }
 
+#portfolio-gallery a {
+   display: flex;
+   justify-content: center;
+}
+
+
+
 .gallery-container {
    border: 1px black solid;
-   height: 50px;
+   height: 100px;
    border-radius: 60px;
    margin-top: 20px;
    
@@ -265,7 +284,7 @@ button:hover {
 
 #footer {
    background-color: #E02626;
-   height: 200px;
+   height: 210px;
    margin-top: 30px;
 }
 
@@ -274,16 +293,21 @@ h3 {
 }
 
 .footer-logo {
+   height: 100px;
    display: flex;
    justify-content: center;
-   
-
+   align-items: center;
 }
 
 .social {
    display: flex;
    align-items: center;
    justify-content: center;
+}
+
+.social p {
+   color: #ffffff;
+   margin-top: 10px;
 }
 
 .social img {
@@ -307,7 +331,7 @@ h3 {
    }
 
    #main-header {
-      height: 110px;
+      height: 80px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -382,7 +406,7 @@ h3 {
 
 
    #main-header {
-      height: 110px;
+      height: 80px;
       display: flex;
       justify-content: space-between;
       align-items: center;
