--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,30 @@ h3 {
    padding: 10px;
 }
 
+/* progress bar animation*/
+
+.progress {
+   position: fixed;
+   top: 80px;
+   left: 0;
+   right: 0;
+   height: 10px;
+   background-color: #f44336;
+   transform-origin: 0 50%;
+}
+
+@keyframes grow-progress {
+   from { transform: scaleX(0); }
+   to { transform: scaleX(1); }
+}
+
+.progress {
+   animation: grow-progress 3s linear;
+}
+
+.progress {
+   animation-timeline: scroll();
+}
 
  @media screen and (min-width: 768px) {
 
