--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ body {
  }
 
  .video-container {
-   height: fit-content;
+   height: 700px;
    width: fit-content;
  }
 
@@ -368,7 +368,7 @@ h3 {
 
 .progress {
    position: fixed;
-   top: 80px;
+   top: 78px;
    left: 0;
    right: 0;
    height: 10px;
@@ -389,6 +389,116 @@ h3 {
    animation-timeline: scroll();
 }
 
+
+
+/* video controls */
+
+#player-container {
+   position: relative;
+   display: flex;
+   flex-direction: column;
+}
+
+.video-controls.hidden {
+ display: none;
+}
+
+.video-controls {
+   right: 0;
+   left: 0;
+   padding: 20px;
+   position: absolute;
+   bottom: 0px;
+   transition: all 0.2s ease;
+   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+   display: flex;
+ }
+ 
+ .video-controls.hide {
+   opacity: 0;
+   pointer-events: none;
+ }
+
+ button {
+   padding: 0;
+   border: 0;
+   background-color: transparent;
+ }
+
+ .fa, .fa-solid {
+   color: #fff;
+   font-size: 28px;
+   margin-left: 20px;
+ } 
+
+ .fa-stop-circle-o {
+   margin-right: 20px;
+ }
+
+ .fa-volume-up {
+   margin-left: auto;
+ }
+
+ input[type="range"] {
+   -webkit-appearance: none;
+   appearance: none;
+   background: transparent;
+   cursor: pointer;
+   width: 15rem;
+ }
+ 
+ /* Removes default focus */
+ input[type="range"]:focus {
+   outline: none;
+ }
+ 
+ /******** Chrome, Safari, Opera and Edge Chromium styles ********/
+ /* slider track */
+ input[type="range"]::-webkit-slider-runnable-track {
+   background-color: #ffffff;
+   border-radius: 0.5rem;
+   height: 0.5rem;
+ }
+ 
+ /* slider thumb */
+ input[type="range"]::-webkit-slider-thumb {
+   -webkit-appearance: none; /* Override default look */
+   appearance: none;
+   margin-top: -4px; /* Centers thumb on the track */
+   background-color: #808080;
+   border-radius: 0.5rem;
+   height: 1rem;
+   width: 1rem;
+ }
+ 
+ input[type="range"]:focus::-webkit-slider-thumb {
+   outline: 3px solid #808080;
+   outline-offset: 0.125rem;
+ }
+ 
+ /*********** Firefox styles ***********/
+ /* slider track */
+ input[type="range"]::-moz-range-track {
+   background-color: #ffffff;
+   border-radius: 0.5rem;
+   height: 0.5rem;
+ }
+ 
+ /* slider thumb */
+ input[type="range"]::-moz-range-thumb {
+   background-color: #808080;
+   border: none; /*Removes extra border that FF applies*/
+   border-radius: 0.5rem;
+   height: 1rem;
+   width: 1rem;
+ }
+ 
+ input[type="range"]:focus::-moz-range-thumb{
+   outline: 3px solid #808080;
+   outline-offset: 0.125rem;
+ }
+
+
  @media screen and (min-width: 768px) {
 
 
@@ -401,7 +511,7 @@ h3 {
       position: sticky;
       top: 0px;
       background-color: #E02626;
-      border-bottom: solid 1px #c3c3c3;
+      border-bottom: solid 1px #E02626;
       z-index: 1;
    }
 
