--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,10 @@ body {
    text-align: center;
    background-color: #c3c3c3;
    height: 300px;
+   
  }
+
+
  
  #banner h2 {
    color: black;
@@ -159,14 +162,15 @@ body {
    
 }
 
+
 #spot h2 {
    text-decoration: underline;
    text-align: center;
 }
 
 .container {
-   background-color: #c3c3c3;
-   height: 400px;
+   background-color: #F9D5D5;
+   height: auto;
    margin-top: 40px;
    box-shadow: 0px 10px 20px -5px rgba(165, 114, 114, 0.8);
 }
@@ -178,9 +182,8 @@ body {
 }
 
 .container p {
-   margin-top: 70%;
-   border-top: 2px black solid;
    padding-top: 10px;
+   text-align: center;
 }
 
 #mentions {
@@ -200,6 +203,7 @@ body {
 #project img {
    border-radius: 40px;
    height: 200px;
+   width: auto;
    margin-top: 50px;
    box-shadow: 0px 10px 20px -5px rgba(165, 114, 114, 0.8);
 }
@@ -262,8 +266,10 @@ body {
    transition: transform .3s ease-in-out, box-shadow 0.3s ease;
 }
 
+
 #course-details h2 {
    margin-top: 30px;
+   text-align: center;
 }
 
 #course-details p {
