--- a/css/main.css
+++ b/css/main.css
@@ -89,20 +89,36 @@ body {
 
  #banner {
    text-align: center;
-   background-color: #c3c3c3;
-   height: 300px;
-   
+   height: 500px;
+   background-image: url(../images/banner.jpg);
+   background-size: cover;
+   opacity: 0.8;   
  }
 
-
+#banner h1 {
+   margin-top: 50px;
+   margin-bottom: 50px;
+   opacity: 1;
+}
  
  #banner h2 {
    color: black;
-   margin-top: 10px;
+   font-weight: bold;
+   margin-bottom: 50px;
+   opacity: 1;
  }
 
  #banner h3 {
    color: #E02626;
+   font-weight: bold;
+   opacity: 1;
+ }
+
+ #banner p {
+   color: white;
+   font-weight: bold;
+   margin-bottom: 50px;
+   opacity: 1;
  }
 
  h1,h2 {
